--- a/style/header.css
+++ b/style/header.css
@@ -1,143 +1,203 @@
-
 header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 375px;
+    justify-content: space-around;
+    flex-direction: row-reverse;
+    width: 100vw;
     height: 64px;
     padding: 17px 20px 0px 20px;
 }
 
-header > h2 > span {
-    color: var(--Primary-red);
-}
-
-#menuToggle {
-    display: block;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-#menuToggle a {
-    text-decoration: none;
-    color: #232323;
-
-    transition: color 0.3s ease;
-}
-
-#menuToggle a:hover {
-    color: var(--Primary-red);
-}
-
-#menuToggle input {
- 
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -7px;
-    left: -5px;
-
+header > h2 {
     cursor: pointer;
-
-    opacity: 0;
-    /* hide this */
-    z-index: 2;
-    /* and place it over the hamburger */
-
-    -webkit-touch-callout: none;
+    font-size: 1rem;
 }
 
-/*
- * Just a quick hamburger
- */
-#menuToggle span {
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-
-    background: var(--Primary-Black);
-    border-radius: 3px;
-
-    z-index: 1;
-
-    transform-origin: 4px 0px;
-
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        opacity 0.55s ease;
+header>h2>span {
+    color: var(--Primary-red);
 }
 
-#menuToggle span:first-child {
-    transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-    transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked~span {
-    opacity: 1;
-    transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked~span:nth-last-child(3) {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked~span:nth-last-child(2) {
-    transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu {
-    position: absolute;
+#ckeckboxMenuMobile{
     display: none;
-    align-items: flex-end;
-    flex-direction: column;
-    padding: 50px;
-    margin: -60px 0 0 -120px;
-    padding-top: 125px;
-    background-color: var(--Primary-Gray);
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-    
-    transform-origin: 0% 0%;
-    transform: translate(100%, 0);
-    
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu a {
-    padding: 5px 0;
-    font-size: 1.5rem;
+.menu-desktop{
+    width: 577px;
+    height: 49px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked~ul {
-    transform: none;
+.menu-desktop > a {
+    font-size: 18px;
+    color: var(--Primary-Black);
+    text-decoration: none;
+    padding: 5px 22px;
+    border-radius: 50px;
+    font-weight: bold;
+}
+
+.menu-desktop > a:active, a:hover, a:focus{
+    border: 1px solid var(--Primary-red);
+}
+
+.wrapper-desc-header{
+    display: flex;
+    width: 16%;
+}
+.descrip-header{
+    margin-left: 10px;
+    font-size: 14px;
+}
+
+
+@media only screen and (max-width: 992px) {
+    header {
+        width: 90vw;
+        flex-direction: row;
+        justify-content: space-between;
+
+    }
+    header > h2 {
+        cursor: pointer;
+        font-size: 1.2rem;
+    }
+
+    .wrapper-desc-header{
+        display: none;
+    }
+
+    #ckeckboxMenuMobile{
+        display: block;
+    }
+
+    #menuToggle {
+        display: block;
+        position: relative;
+        top: 0px;
+        left: 0px;
+        z-index: 1;
+    
+        -webkit-user-select: none;
+        user-select: none;
+    }
+    
+    #menuToggle a {
+        text-decoration: none;
+        color: #232323;
+    
+        transition: color 0.3s ease;
+    }
+    
+    #menuToggle a:hover {
+        color: var(--Primary-red);
+    }
+    
+    #menuToggle input {
+        width: 40px;
+        height: 32px;
+        position: absolute;
+        top: -7px;
+        left: -5px;
+    
+        cursor: pointer;
+    
+        opacity: 0;
+        /* hide this */
+        z-index: 2;
+        /* and place it over the hamburger */
+    
+        -webkit-touch-callout: none;
+    }
+    
+    /*
+     * Just a quick hamburger
+     */
+    #menuToggle span {
+        display: block;
+        width: 33px;
+        height: 4px;
+        margin-bottom: 5px;
+        position: relative;
+    
+        background: var(--Primary-Black);
+        border-radius: 3px;
+    
+        z-index: 1;
+    
+        transform-origin: 4px 0px;
+    
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+            background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+            opacity 0.55s ease;
+    }
+    
+    #menuToggle span:first-child {
+        transform-origin: 0% 0%;
+    }
+    
+    #menuToggle span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+    }
+    
+    /* 
+     * Transform all the slices of hamburger
+     * into a crossmark.
+     */
+    #menuToggle input:checked~span {
+        opacity: 1;
+        transform: rotate(45deg) translate(-2px, -1px);
+        background: #232323;
+    }
+    
+    /*
+     * But let's hide the middle one.
+     */
+    #menuToggle input:checked~span:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+    }
+    
+    /*
+     * Ohyeah and the last one should go the other direction
+     */
+    #menuToggle input:checked~span:nth-last-child(2) {
+        transform: rotate(-45deg) translate(0, -1px);
+    }
+    
+    /*
+     * Make this absolute positioned
+     * at the top left of the screen
+     */
+    #menu {
+        width: 142px;
+        height: 290px;
+        position: absolute;
+        display: flex;
+        align-items: flex-end;
+        flex-direction: column;
+        justify-content: space-around;
+        margin: -60px 0 0 -63px;
+        padding: 90px 20px 10px 20px;
+        background-color: var(--Primary-Gray);
+        list-style-type: none;
+        -webkit-font-smoothing: antialiased;
+        transform-origin: 0% 0%;
+        transform: translate(-910%, 0);
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    }
+    
+    #menu a {
+        padding: 5px 0;
+        font-size: 1.5rem;
+    }
+    
+    /*
+     * And let's slide it in from the left
+     */
+    #menuToggle input:checked~ul {
+        transform: none;
+    }
 }
