--- a/style/main.css
+++ b/style/main.css
@@ -4,27 +4,25 @@ main {
 }
 
 #title {
-    position: relative;
     width: 100%;
-    height: 200px;
+    height: 388px;
     display: flex;
+    align-items: start;
+    flex-direction: column;
     margin-top: 30px;
     padding: 0 20px;
-    font-size: 1.5rem;
     letter-spacing: 2px;
     line-height: 1;
+}
+
+
+#title > h1 {
+    text-align: start;
 }
 
 figure > img{
     width: 100%;
 }
-
-#title>img {
-    position: absolute;
-    top: 0px;
-    right: 20px;
-}
-
 
 #about {
     padding: 30px 20px;
@@ -32,7 +30,45 @@ figure > img{
 
 .title-art {
     position: relative;
-    font-size: 3rem;
+    font-size: 46px;
+}
+
+.title-desktop{
+    display: flex;
+    font-size: 120px;
+}
+
+#img1 {
+    position: absolute;
+    top: -10px;
+    left: 530px;
+}
+#img2 {
+    position: absolute;
+    top: 0px;
+    left: 960px;
+}
+#img3 {
+    top: 10px;
+    right: 10px;
+    margin-right: 20px;
+}
+
+#img4 {
+    position: absolute;
+    bottom: -13px;
+    left: 170px;
+    margin-right: 20px;
+}
+
+#container-img{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+#container-img > img {
+    width: 50%;
+    height: 484px;
 }
 
 .span-edit {
